k8s/minikube/ui-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-api
  labels:
    app: ui-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-api
  template:
    metadata:
      labels:
        app: ui-api
    spec:
      containers:
      - name: ui-api
        image: detours/ui-api:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: ui-api
            containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
