k8s/minikube/ui-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
