k8s/minikube/ui-api/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: ui
    servicePort: 3000
  rules:
  - host: ui.dataseams.local
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 3000
